contact css adjusted

--- a/src/styles.css
+++ b/src/styles.css
@@ -30,23 +30,32 @@ footer p {
 }
 .logo-walking {
   display: block;
-  margin: 0px 59px 0px 150px;
+  margin: 0px 80px;
   border: 10px solid black;
   border-radius: 15px;
   width: 300px;
 }
 
+.intro {
+  margin-right: 50px;
+}
 .intro-text {
   padding-top: 100px;
+  margin-right: 0px;
 }
 
 .contact h2 {
   margin: 70px;
 }
 
+.contact {
+  margin: auto 270px;
+}
+
 .contact-links {
   display: flex;
   justify-content: space-evenly;
+  color: black;
 }
 
 footer {
