--- a/src/styles.css
+++ b/src/styles.css
@@ -87,6 +87,7 @@ a:hover {
 
 .content-area p {
   margin: auto;
+  text-align: left;
 }
 
 .read-more-link {
@@ -103,6 +104,17 @@ a {
 .blog-posts p {
   margin-top: 50px;
 }
+
+.pagination .page-link {
+  color: black;
+}
+
+.pagination .active .page-link {
+  background-color: black;
+  color: white;
+  border-color: black;
+}
+
 footer {
   margin-top: 80px;
 }
