--- a/src/styles.css
+++ b/src/styles.css
@@ -50,18 +50,13 @@ hr {
   width: 300px;
 }
 
-.intro {
-  margin-right: 50px;
-}
 .intro-text {
-  padding-top: 100px;
-  margin-right: 0px;
+  margin-top: 80px;
 }
 
 .contact h2 {
+  margin: 70px auto;
   font-size: 40px;
-  margin-top: 70px;
-  margin-bottom: 70px;
 }
 
 .contact {
@@ -94,9 +89,10 @@ a:hover {
   color: grey;
 }
 
-.essay-entry {
+.essay-entry-row {
   margin: 25px auto;
 }
+
 a {
   color: black;
 }
@@ -123,5 +119,19 @@ footer {
   .walk-my-shoes-title {
     font-size: 40px;
     font-weight: bold;
+  }
+  .content-area {
+    border: none;
+    padding: 0;
+    margin: auto 50px;
+  }
+  .essay-entry {
+    margin-bottom: 30px;
+  }
+  .blog-posts p {
+    margin-top: 25px;
+  }
+  .blog-posts h2 {
+    margin-top: 15px;
   }
 }
