--- a/src/styles.css
+++ b/src/styles.css
@@ -4,16 +4,18 @@ body {
   text-align: center;
 }
 
-h1,
+h1 {
+  font-size: 80px;
+  font-weight: bold;
+  margin: 48px auto;
+}
+
 h2 {
   font-size: 2em;
   text-align: center;
   line-height: 1.5;
 }
-h1 {
-  font-weight: bold;
-  margin: 48px auto;
-}
+
 h5 {
   color: grey;
   font-size: smaller;
@@ -116,6 +118,9 @@ footer {
 }
 
 @media (max-width: 576px) {
+  h1 {
+    font-size: 50px;
+  }
   .walk-my-shoes-title {
     font-size: 40px;
     font-weight: bold;
@@ -123,10 +128,11 @@ footer {
   .content-area {
     border: none;
     padding: 0;
-    margin: auto 50px;
+    margin: auto 40px;
   }
   .essay-entry {
     margin-bottom: 30px;
+    padding: 0px;
   }
   .blog-posts p {
     margin-top: 25px;
