--- a/src/styles.css
+++ b/src/styles.css
@@ -5,8 +5,8 @@ body {
 }
 
 h1 {
-  font-size: 80px;
-  font-weight: bold;
+  font-family: "Beth Ellen", cursive;
+  font-size: 70px;
   margin: 48px auto;
 }
 
@@ -14,6 +14,7 @@ h2 {
   font-size: 2em;
   text-align: center;
   line-height: 1.5;
+  font-weight: bolder;
 }
 
 h5 {
@@ -38,9 +39,9 @@ hr {
   border: black solid 1px;
   border-radius: 50px;
 }
-.logo-title {
+.page-title {
   width: 600px;
-  border: 10px solid black;
+  border: 8px solid black;
   border-radius: 15px;
   margin-bottom: 80px;
 }
@@ -58,16 +59,12 @@ hr {
 }
 
 .intro-text {
-  margin-top: 80px;
+  margin-top: 120px;
 }
 
 .contact h2 {
   margin: 70px auto;
   font-size: 40px;
-}
-
-.contact {
-  margin: auto 270px;
 }
 
 .contact-links {
@@ -117,7 +114,9 @@ a {
   color: white;
   border-color: black;
 }
-
+#walk-my-shoes {
+  font-size: larger;
+}
 footer {
   margin-top: 80px;
 }
@@ -126,9 +125,17 @@ footer {
   h1 {
     font-size: 50px;
   }
-  .walk-my-shoes-title {
+  #walk-my-shoes {
     font-size: 40px;
     font-weight: bold;
+  }
+  .page-title {
+    border: none;
+    margin-bottom: 30px;
+  }
+
+  .intro-text {
+    margin-top: 70px;
   }
   .content-area {
     border: none;
